@@ -1,3 +1,7 @@
+2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
+
+	added try catch around the channel close
+
 2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/ConversationManager.cs: fixed the destroy method call
